--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -27,6 +27,9 @@ jobs:
       uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
       with:
         ruby-version: 2.7
+        bundler-cache: true
+    - name: Install Sqllite3
+      run: apt-get install libsqlite3-dev
     - name: Install dependencies
       run: bundle install
     - name: Run tests
