--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -29,7 +29,7 @@ jobs:
         ruby-version: 2.7
         bundler-cache: true
     - name: Install Sqllite3
-      run: apt-get install libsqlite3-dev
+      run: sudo apt-get install libsqlite3-dev
     - name: Install dependencies
       run: bundle install
     - name: Run tests
